# Aircrak-automation

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
core/: bootstrap.py  config.py  error_handler.py
engines/: adaptive_engine.py  attack_strategy.py  handshake_capture.py  hardware_optimizer.py  multi_interface.py  password_generator.py  password_tester.py  pmf_detector.py  pmkid_capture.py  real_attack_engine.py  rules_engine.py  snr_engine.py  stealth_engine.py  streaming_engine.py
intelligence/: cracking_triage.py  health_guardian.py  intelligence_controller.py  monitor_manager.py  network_scanner.py  password_intelligence.py  target_analyzer.py  wps_detector.py
learning/: genetic_engine.py  model_persistence.py  performance_tracker.py  persistence_brain.py  smart_scheduler.py
orchestration/: attack_controller.py  main_controller.py  real_attack_controller.py  state_manager.py
phishing_simulation/templates/credential_harvesting/: google_template.html
tests/: test_config.py  test_helpers.py  test_intelligence.py  test_mutation.py
tools/: aircrack_wrapper.py  crunch_wrapper.py  hashcat_wrapper.py  report_generator.py  wordlist_manager.py
