[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pegasus-nexus"
version = "1.0.0"
description = "Automated wireless security auditing framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["security", "wireless", "auditing", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/user/pegasus-nexus"
Issues = "https://github.com/user/pegasus-nexus/issues"

[project.scripts]
pegasus-nexus = "main:main"

[tool.setuptools.packages.find]
include = ["pegasus_nexus*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
